--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ archives_base_name=configurable-statistic-units
 
 # Dependencies
 fabric_version=0.119.2+1.21.4
+
+yacl_version=3.6.6+1.21.4-fabric
+modmenu_version=13.0.3
