--- a/src/client/resources/configurable-statistic-units.client.mixins.json
+++ b/src/client/resources/configurable-statistic-units.client.mixins.json
@@ -3,7 +3,7 @@
 	"package": "mom.wii.configurablestatisticunits.mixin.client",
 	"compatibilityLevel": "JAVA_21",
 	"client": [
-		"ExampleClientMixin"
+		"MixinStatFormatter"
 	],
 	"injectors": {
 		"defaultRequire": 1
