--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,13 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=25w34b
-yarn_mappings=25w34b+build.1
+minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.1
 loader_version=0.17.2
 
 # Mod Properties
 mod_version=2.0.0
 maven_group=mom.wii.configurablestatisticunits
 archives_base_name=configurable-statistic-units
-
-yacl_version=3.6.6+1.21.5-fabric
-modmenu_version=14.0.0-rc.2
 
 kaleido_config_version=0.3.3+1.3.2
